if (POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif()



ADD_DEFINITIONS(-DASIO_STANDALONE)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cfg_items)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/rpc_client)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/rpc_server)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../3rdparty/asio/include)


aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} FILE_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/cfg_items FILE_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/rpc_client FILE_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/rpc_server FILE_SRCS)

if (UNIX)
	set(LIBS ${LIBS} pthread)
endif ()


ADD_LIBRARY(${PROJECT_NAME} SHARED ${FILE_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBS})
ADD_LIBRARY(${PROJECT_NAME}_static STATIC ${FILE_SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME "${PROJECT_NAME}")



INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
INSTALL(TARGETS ${PROJECT_NAME}_static DESTINATION lib)

